# testpilot

./: .flake8  .gitignore  .pre-commit-config.yaml  BUG_FIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  LICENSE  MASTERPLAN.md  PHASE_1_COMPLETE.md  README.md  demo_advanced_testpilot.py  my_module.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: advanced-features.yml  testpilot_advanced.yml  testpilot_ci.yml
docs/: ADVANCED_FEATURES.md  CI.md  IMPROVEMENTS_SUMMARY.md  README.md  api.md  architecture.md  usage.md
examples/: README.md  demo_transformation.py
examples/sample_project/: README.md  calculator.py
ide_integrations/vscode_extension/: package.json
ide_integrations/vscode_extension/src/: extension.ts
scripts/: setup_testpilot.py
testpilot/: __init__.py  cli.py  core.py  llm_providers.py  prompt.yaml  streaming.py
tests/: test_cli.py  test_core.py  test_enhanced_core.py  test_enhanced_features.py  test_streaming.py
